syntax = "proto3";
package Message;

option java_package = "com.jedi.serverEngine.message";  
option java_outer_classname = "PBNetMessageBase";



message NetMessageBase { // 消息开始
	uint32 MessageId = 1;
	bytes MessageBoby = 2;
	//map<string, uint64> projects = 3;
} // 消息结束













